# fpsparty

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  CODE_REVIEW.md  LICENSE  TODO.md
assets/shaders/: build.sh  composite.frag  composite.vert  crosshair.frag  crosshair.vert  descriptors.glsl  extensions.glsl  grid.frag  grid.glsl  grid.vert  mesh.glsl  numbers.glsl  scene.glsl  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
assets/shaders/atmosphere/: atmosphere.glsl  sky.frag  sky.vert  transmittance.comp
assets/textures/: conveyor.ppm  conveyor_side.ppm  dirt.ppm  placeholder.ppm  stone.ppm
docs/: testing.md
src/: constants.hpp  enet.hpp  flags.hpp  flt.hpp  glfw.hpp  int.hpp  rc.hpp  vma.hpp
src/algorithms/: unordered_erase.hpp
src/client/: application.cpp  application.hpp  block_model.hpp  block_model_registry.cpp  block_model_registry.hpp  block_texture_registry.cpp  block_texture_registry.hpp  client.cpp  client.hpp  depth_image_recycler.cpp  depth_image_recycler.hpp  frame_counter.cpp  frame_counter.hpp  global_vulkan_state.cpp  global_vulkan_state.hpp  graphics.cpp  graphics.hpp  graphics_buffer.cpp  graphics_buffer.hpp  grid_mesh.cpp  grid_mesh.hpp  grid_vertex.hpp  index_buffer.cpp  index_buffer.hpp  local_player.cpp  local_player.hpp  main.cpp  perspective_projection.hpp  scene.cpp  scene.hpp  session.cpp  session.hpp  sign.hpp  staging_buffer.cpp  staging_buffer.hpp  texture_manager.cpp  texture_manager.hpp  transformation_matrices.hpp  vertex_buffer.cpp  vertex_buffer.hpp
src/client/block_mesh/: block_mesh.cpp  block_mesh.hpp  full.cpp  full.hpp
src/client/block_mod/: block_mod.hpp  conveyor.cpp  conveyor.hpp  dirt.cpp  dirt.hpp  placeholder.cpp  placeholder.hpp  stone.cpp  stone.hpp
src/game/: block.hpp  block_bounds.hpp  block_bounds_registry.cpp  box_tree.hpp  constants.hpp  entity.hpp  entity_handle.hpp  entity_id_table.hpp  entity_traits.hpp  entity_type.hpp  entity_world.cpp  entity_world.hpp  game.cpp  game.hpp  gravity.hpp  grid.cpp  grid.hpp  humanoid.cpp  humanoid.hpp  humanoid_movement.cpp  humanoid_movement.hpp  item.cpp  item.hpp  player.cpp  player.hpp  projectile.cpp  projectile.hpp  projectile_movement.cpp  projectile_movement.hpp  replicated_game.cpp  replicated_game.hpp  server.cpp  server.hpp
src/game/client/: client.cpp  client.hpp  game.cpp  game.hpp  humanoid.cpp  humanoid.hpp  player.cpp  player.hpp  projectile.cpp  projectile.hpp  replicated_game.cpp  replicated_game.hpp  replicated_humanoid.cpp  replicated_humanoid.hpp  replicated_player.cpp  replicated_player.hpp  replicated_projectile.cpp  replicated_projectile.hpp  replicated_world.cpp  replicated_world.hpp
src/game/core/: constants.hpp  entity.cpp  entity.hpp  entity_id.hpp  entity_type.hpp  entity_world.cpp  entity_world.hpp  game_object.cpp  game_object.hpp  game_object_id.hpp  grid.cpp  grid.hpp  humanoid_input_state.hpp  humanoid_movement.cpp  humanoid_movement.hpp  projectile_movement.cpp  projectile_movement.hpp  sequence_number.hpp
src/game/server/: entity_world.cpp  entity_world.hpp  game.cpp  game.hpp  grid.cpp  grid.hpp  humanoid.cpp  humanoid.hpp  player.cpp  player.hpp  projectile.cpp  projectile.hpp  server.cpp  server.hpp  wall.cpp  wall.hpp  world.cpp  world.hpp
src/game_authority/: game.cpp  game.hpp  humanoid.cpp  projectile.cpp
src/game_core/: constants.hpp  humanoid_input_state.hpp  humanoid_movement.cpp  humanoid_movement.hpp  projectile_movement.cpp  projectile_movement.hpp
src/game_replica/: game.cpp  game.hpp  replicated_game.cpp  replicated_game.hpp
src/graphics/: buffer.cpp  buffer.hpp  buffer_usage.hpp  command_list.cpp  compare_op.hpp  compute_pipeline.cpp  compute_pipeline.hpp  copy_command_list.cpp  cull_mode.hpp  descriptor.cpp  descriptor.hpp  descriptor_heap.cpp  descriptor_heap.hpp  descriptor_heap_pool.cpp  descriptor_heap_pool.hpp  descriptor_set_layout.cpp  descriptor_set_layout.hpp  descriptor_type.hpp  front_face.hpp  global_vulkan_state.cpp  global_vulkan_state.hpp  graphics.cpp  graphics.hpp  graphics_buffer.cpp  graphics_buffer.hpp  image.cpp  image.hpp  image_format.hpp  image_layout.hpp  image_usage.hpp  index_buffer.cpp  index_buffer.hpp  index_type.hpp  mapped_memory.cpp  mapped_memory.hpp  mapping_mode.hpp  pipeline.cpp  pipeline.hpp  pipeline_layout.cpp  pipeline_layout.hpp  (+22 more)
src/math/: axis.hpp  box.hpp  floordiv.hpp  mat.hpp  quat.hpp  sign.hpp  transformation_matrices.hpp  transforms.hpp  vec.hpp
src/net/: client.cpp  client.hpp  constants.hpp  entity_id.hpp  input_state.hpp  message_type.hpp  object_id.hpp  ostream_writer.hpp  player_join_request_id.hpp  sequence_number.hpp  serialize.hpp  server.cpp  server.hpp  server_message_handler.cpp  server_message_handler.hpp  writer.hpp
src/net/core/: constants.hpp  entity_id.hpp  input_state.hpp  message_type.hpp  player_join_request_id.hpp  sequence_number.hpp
src/ppm/: ppm.cpp  ppm.hpp
src/scene/: camera.hpp  keyframe.hpp  mesh.hpp  mesh_instance.hpp  scene.cpp  scene.hpp
src/serial/: byteswap.hpp  eigen.hpp  ostream_writer.hpp  reader.hpp  serialize.hpp  span_reader.hpp  span_writer.hpp  write_error.hpp  writer.hpp
src/server/: main.cpp  server.cpp  server.hpp
tests/client/: local_player.cpp  scene.cpp  session.cpp
tests/game/: box_tree.cpp  entity_id_table.cpp  entity_world.cpp  grid.cpp  grid_raycast.cpp
tests/game/core/: grid_raycast.cpp
tests/net/: transport.cpp
tests/ppm/: ppm.cpp
tests/scene/: scene.cpp
tests/server/: server.cpp
